testcases/semantic_error/no_pool_params.shp
class Main
{
    f1: i32;
}
